# CVSA_feedback

./: CMakeLists.txt  README.md  package.xml
cfg/: CVSA.cfg
include/feedback_cvsa/: Autopilot.h  CVSA_layout.h  CVSA_layout_visual.h  ControlCVSA.h  SingleArrow.h  TrainingArrow.h  TrainingCVSA.h  TrainingCVSA_visual.h  TrialSequence.h
launch/: feedback_calibration.launch  feedback_evaluation.launch
msg/: Trials_to_keep.msg
src/: Autopilot.cpp  CVSA_layout.cpp  CVSA_layout_visual.cpp  ControlCVSA.cpp  SingleArrow.cpp  TrainingArrow.cpp  TrainingCVSA.cpp  TrainingCVSA_visual.cpp  TrialSequence.cpp  controlCVSA_node.cpp  trainingCVSA_node.cpp  trainingCVSA_visual_node.cpp
srv/: Repeat_trial.srv
