<?xml version="1.0"?>
<package format="2">
  <name>feedback_cvsa</name>
  <version>0.0.1</version>
  <description>feedback cvsa with neurodraw</description>
  <author email="paolo.forin@phd.unipd.it">Paolo Forin</author>
  <maintainer email="paolo.forin@phd.unipd.it">Paolo Forin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>message_generation</depend>

  <depend>neurodraw</depend>
  <depend>rosneuro_msgs</depend>
  <depend>rosneuro_feedback_wheel</depend>
  <depend>message_runtime</depend>
    
</package>
